[tool.poetry]
name = "csv-combiner"
version = "0.1.0"
description = "A tool to combine multiple CSV files with source tracking"
authors = ["Puya Khalili <pooya.khalili@gmail.com>"]
readme = "README.md"
packages = [{include = "csv_combiner", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^2.0.0"

[tool.poetry.scripts]
csv-combiner = "csv_combiner.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"